<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mapavintage"
    tools:context=".MainActivity3">

  <ImageView
      android:id="@+id/imageView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="116dp"
      android:contentDescription="@string/img"
      app:layout_constraintStart_toStartOf="@+id/imageView8"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/frameframe" />

  <ImageView
      android:id="@+id/imageView8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="436dp"
      android:contentDescription="@string/img1"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:srcCompat="@drawable/cima" />

  <ImageView
      android:id="@+id/imageView12"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="40dp"
      android:layout_marginEnd="40dp"
      android:layout_marginBottom="220dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3"
      app:srcCompat="@drawable/rectangle4"
      android:contentDescription="@string/img5" />

  <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="37dp"
      android:backgroundTint="@color/XXX"
      android:fontFamily="@font/inknut_antiqua"
      android:text="@string/voltar"
      android:textColor="@color/X"
      android:textSize="15sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="28dp"
      android:layout_marginBottom="69dp"
      android:fontFamily="@font/inknut_antiqua"
      android:text="@string/score_final"
      android:textColor="@color/X"
      android:textSize="40sp"
      app:layout_constraintBottom_toTopOf="@+id/imageView12"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="17dp"
      android:fontFamily="@font/inknut_antiqua"
      android:text="@string/_100"
      android:textColor="@color/X"
      android:textSize="70sp"
      app:layout_constraintBottom_toTopOf="@+id/textView5"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:fontFamily="@font/inknut_antiqua"
      android:text="@string/parab_ns"
      android:textColor="@color/XXXXX"
      android:textSize="60sp"
      app:layout_constraintBottom_toTopOf="@+id/button"
      app:layout_constraintEnd_toEndOf="@+id/imageView12" />
</androidx.constraintlayout.widget.ConstraintLayout>


