<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mapavintage"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle"
        android:contentDescription="@string/image1" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="77dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/frame"
        android:contentDescription="@string/image" />

    <View
        android:id="@+id/containeruser"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/container_user"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/icone_pessoa"
        app:layout_constraintStart_toStartOf="@id/containeruser"
        app:layout_constraintEnd_toEndOf="@id/containeruser"
        app:layout_constraintTop_toTopOf="@id/containeruser"
        app:layout_constraintBottom_toBottomOf="@id/containeruser"
        android:contentDescription="@string/icone" />

    <TextView
        android:id="@+id/text_nome_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usu_rio"
        android:fontFamily="@font/inknut_antiqua"
        android:textColor="@color/X"
        android:textSize="22sp"
        android:layout_marginTop="-10dp"
        app:layout_constraintTop_toBottomOf="@id/containeruser"
        app:layout_constraintEnd_toEndOf="@id/containeruser"
        app:layout_constraintStart_toStartOf="@id/containeruser"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="238dp"
        android:layout_height="0dp"
        android:layout_marginTop="356dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="@color/XXX"
        android:fontFamily="@font/inknut_antiqua"
        android:freezesText="false"
        android:text="@string/nova_partida"
        android:textColor="@color/X"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="161dp"
        android:layout_height="53dp"
        android:layout_marginBottom="237dp"
        android:backgroundTint="@color/XXX"
        android:fontFamily="@font/inknut_antiqua"
        android:text="@string/highscore"
        android:textAlignment="center"
        android:textColor="@color/X"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

</androidx.constraintlayout.widget.ConstraintLayout>

